# job_scraper

./: Bhakti_Resume.txt  README.md  job_scraper.py  job_scraper_langchain.py  main.py  pyproject.toml  requirements.txt
